# scroll-hap-prototype

./: .gitignore  FIXES.md  README.md  index.html  serve.sh
hap-wasm-approach/: build.sh  index.html
hap-wasm-approach/hap-wasm/: Cargo.toml
hap-wasm-approach/hap-wasm/src/: lib.rs
tools/video-to-webp/: Cargo.toml
tools/video-to-webp/src/: main.rs
webp-approach/: index.html
