[package]
name = "hap-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "HtmlCanvasElement",
    "WebGlRenderingContext",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlBuffer",
    "WebGlTexture",
    "WebGlUniformLocation",
    "WebGlActiveInfo",
] }
wasm-bindgen-futures = "0.4"

# HAP dependencies (using local paths)
hap-parser = { path = "../../../hap-rs/hap-parser" }

# Utilities
byteorder = "1.5"
thiserror = "1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Memory management
wee_alloc = { version = "0.4", optional = true }

[dependencies.console_error_panic_hook]
version = "0.1.7"
optional = true

[features]
default = ["console_error_panic_hook"]

[profile.release]
# Optimize for small binary size (important for WASM)
opt-level = "s"
lto = true
